--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
-jsonschema==2.6.0
+jsonschema>=3.0
 jsonschema-specifications==2023.12.1
 keyboard==0.13.5
 Mako==1.3.5
