--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 alembic==1.13.1
-altair==5.3.0
+# altair==5.3.0
 attrs==23.2.0
-awscli==1.33.19
-awsebcli==3.14.4
+# awscli==1.33.19
+# awsebcli==3.14.4
 beautifulsoup4==4.12.3
 blessed==1.20.0
 blinker==1.8.2
@@ -37,7 +37,7 @@ importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
-jsonschema>=3.0
+jsonschema==2.6.0
 jsonschema-specifications==2023.12.1
 keyboard==0.13.5
 Mako==1.3.5
